[package]
name = "hello_world"
crate-type = ["cdylib", "lib"]
version = "0.1.0"
edition = "2021"

[dependencies]
# solana-program = "=2.0.3"
solana-program = { path = "/home/rigidus/src/solana/sdk/program", default-features = false }
console_error_panic_hook = { path = "/home/rigidus/src/console_error_panic_hook" }
getrandom = { path = "/home/rigidus/src/getrandom", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-program = { path = "/home/rigidus/src/solana/sdk/program" }
console_error_panic_hook = { path = "/home/rigidus/src/console_error_panic_hook" }
getrandom = { path = "/home/rigidus/src/getrandom", features = ["js"] }
# wasm-bindgen = { optional = true, default-features = false }
# js-sys = { optional = true, default-features = false }
# web-sys = { optional = true, default-features = false }

[features]
js = []

[lib]
crate-type = ["cdylib", "staticlib"]
